--- a/ES6/23.编程风格.md
+++ b/ES6/23.编程风格.md
@@ -70,13 +70,470 @@ const [a, b, c] = [1, 2, 3];
 
 静态字符串一律使用单引号或反引号,不使用双引号.动态字符串使用反引号.
 
+``` js
+// bad
+const a = "foobar";
+const b = 'foo' + a + 'bar';
+
+// acceptable
+const c = `foobar`;
+
+// good
+const a = 'foobar';
+const b = `foo${a}bar`;
+const c = 'foobar';
+```
+
+
+
+#### 23.3解构赋值
+
+使用数组成员对变量赋值时,优先使用解构赋值.
+
+```js
+const arr = [1,2,3,4];
+
+//bad
+const first = arr[0];
+const second = arr[1];
+
+//good
+const [first,second,...other] = arr;
+```
+
+函数的参数如果是对象的成员,优先使用解构赋值
+
+```js
+// bad 
+function getFullName(user){
+  const firstName = user.firstName;
+  const lastName = user.lastName;
+}
+
+// good
+function getFullName(obj){
+  const {firstName,lastName}=obj;
+}
+
+// best 
+function getFullName({firstName,lastName}){}
+```
+
+如果函数返回多个值,优先使用对象的解构赋值,而不是数组的解构赋值.这样便于以后添加返回值,以及更改返回值的顺序.
+
+```js
+//bad
+function processInput(input) {
+  return [left,right,top,bottom];
+}
+
+//good
+function processInput(input){
+  return {left,right,top,bottom};
+}
+// use
+const {left,right} = processInput(input);
+```
+
+
+
+#### 23.4对象
+
+单行定义的对象,最后一个成员不以逗号结尾,多行定义的对象,最后一个成员以逗号结尾.
+
+```js
+// bad
+const a = { k1: v1, k2: v2, };
+const b = {
+  k1: v1,
+  k2: v2
+}
+
+// good 
+const a = { k1: v1, k2: v2 };
+const b = {
+  k1: v1,
+  k2: v2,
+}
+```
+
+对象尽量静态化,一旦定义,就不得随意添加新的属性.如果添加属性不可避免,要使用`Object.assign`方法
+
+```js
+// bad
+const a = {}
+a.x = 3;
+
+// if reshape unavoidable 如果重塑不可避免
+const a = {};
+Object.assign(a,{ x: 3 });
+
+// good
+const a = {x:null};
+a.x = 3;
+```
+
+如果对象的属性名是动态的，可以在创造对象的时候，使用属性表达式定义。
+
+```js
+// bad 
+const obj = {
+  id : 5,
+  name : 'San Francisco',
+};
+obj[getKey('enabled')] = true;
+
+
+// good 
+const obj = {
+  id: 5,
+  name: 'San Francisco',
+  [getKey('enabled')]:true,
+}
+```
+
+上面代码中,对象`obj`的最后一个属性名,需要计算得到,这时最好采用属性表达式,在新建`obj`的时候,将该属性与其他属性定义在一起.这样一来,所有属性就在一个地方定义了
+
+另外,对象的属性和方法,尽量采用简洁表达法,这样易于描述和书写
+
+```js
+var ref = 'some value';
+
+// bad 
+const atom = {
+  ref:ref,
+  value:1,
+  addValue :function(value){
+    return atom.value +value;
+  },
+};
+
+//good
+const atom = {
+  ref,
+  value:1,
+  addValue(value){
+    return atom.value + value;
+  },
+};
+```
+
+
+
+#### 23.5数组
+
+使用扩展运算符`...`拷贝数组
+
+```js
+//bad
+const len = items.length;
+const itemsCopy = [];
+let i;
+for(i = 0; i<len;i++){
+  itemsCopy[i] = items[i];
+}
+
+//good 
+const itemsCopy = [...items];
+```
+
+使用Array.from方法,将**类数组**转化为**数组**
+
+```js
+const foo = document.querySelectorAll('.foo');
+const nodes = Array.from(foo);
+```
+
+
+
+#### 23.6函数
+
+立即执行函数可以写成箭头函数形式.
+
+```js
+(() => {
+  console.log('WelCome to the Internet');
+})()
+```
+
+那些需要使用函数表达式的场合,尽量用箭头函数代替.因为这样更简洁,而且绑定了this
+
+```js
+// bad
+[1,2,3].map(function(x) {
+  return x * x;
+});
+
+// good
+[1,2,3].map((x) => {
+  return x * x;
+})
+
+// best
+[1,2,3,].map=>(x=>x*x);
+```
+
+箭头函数取代`Function.prototype.bind`,不应再用 self/_this/that 绑定this.
+
+```js
+// bad
+const self = this;
+const boundMethod = function(...params){
+  return method.apply(self,params);
+}
+
+// acceptable 可接受的
+const boundMethod = method.bind(this);
+
+// best
+const boundMethod = (...params) => method.apply(this.params);
+```
+
+简单的,单行的,不会复用的函数,建议采用箭头函数,如果函数体较为复杂,行数较多,还是应该采用传统的函数写法.
+
+所有配置项都应该集中在一个对象,放在最后一个参数,布尔值不可以直接作为参数
+
+```js
+//bad
+function divide(a,b,option = false ){}
+
+// good 
+function divide(a,b,{ option = false } = {}){}
+```
+
+不要再函数体内使用arguments变量,使用rest运算符`(...)`代替.因为在rest运算符显式表明你想要获取参数,而且`arguments`是一个类数组的对象,而rest运算符可以提供一个真正的数组
+
+```js
+// bad
+function concatenateAll() {
+  const args = Array.prototype.slice.call(arguments);
+  return args.join('');
+}
+
+// good
+function concatenateAll(...args){
+  return args.join('');
+}
+```
+
+使用默认值语法设置函数参数的默认值
+
+```js
+// bad
+function handleThings(opts){
+  opts = opts || {};
+}
+
+// good
+function handleThings(opts={}){}
+```
+
+
+
+#### 23.7Map结构
+
+注意区分Object和Map,只有模拟现实世界的实体对象时,才使用Object.如果只需要`key:value`的数据结构,使用Map结构.因为Map有内建的遍历机制.
+
+```js
+let map = new Map(arr);
+for(let key of map.keys()) {
+  console.log(key);
+}
+
+for(let value of map.values()){
+  console.log(value);
+}
+
+for(let item of map.entries()){
+  console.log(item[0],item[1]);
+}
+```
 
 
 
 
 
+#### 23.8 Class
+
+总是用Class取代需要prototype的操作,因为Class的写法更简洁,更易于理解.
+
+```js
+// bad
+function Queue(contents = []) {
+  this._queue = [...contents];
+}
+Queue.prototype.pop = function() {
+  const value = this._queue[0];
+  this._queue.splice(0, 1);
+  return value;
+}
+
+
+// good
+class Queue{
+  constructor(contents = []) {
+	this._queue = [...contens];
+  }
+  pop() {
+    const value = this._queue[0];
+    this._queue.splice(0,1);
+    return value;
+  }
+}
+```
+
+使用`extends`实现继承，因为这样更简单，不会有破坏`instanceof`运算的危险。
+
+```js
+// bad
+const inherits = require('inherits');
+function PeekableQueue(contents) {
+  Queue.apply(this, contents);
+}
+inherits(PeekableQueue, Queue);
+PeekableQueue.prototype.peek = function() {
+  return this._queue[0];
+}
+
+// good
+class PeekableQueue extends Queue {
+  peek() {
+    return this._queue[0];
+  }
+}
+```
+
+
+
+#### 23.9 模块
+
+首先,Module 语法是JAVASCRIPT 模块的标准写法,坚持使用这种写法.使用`import`取代`require`.
+
+```js
+// bad
+const moduleA = require('moduleA');
+const func1 = moduleA.func1;
+const func2 = moduleA.func2;
+
+// good
+impot { func1 , func2 } from 'moduleA';
+```
+
+使用`export`取代`module.exports`.
+
+```js
+// cmd 
+var React = require('react');
+
+var Breadcrumbs = React.creteClass({
+  render() {
+    return <nav />;
+  }
+})
+
+module.exports = Breadcrumbs;
+
+
+// ES6 
+import React = 'react';
+
+calss Breadcrumbs extends React.Component {
+  render (){
+     return <nav />;
+  }
+}
+
+export default Breadcrumbs;
+```
+
+如果模块只有一个输出值,就是用`export default`,如果模块有多个输出值,就不使用`export default`,`export default`与普通的`export`不要同时使用。
+
+不要在模块输入中使用通配符,因为这样可以确保你的模块之中,有一个默认输出(export default).
+
+```js
+// bad
+import * as myObject from './importModule';
+
+// good
+import myObject from './importModule';
+```
+
+如果模块默认输出一个函数,函数名的首字母应该小写.
+
+```js
+function makeStyleGuide() {
+}
+
+export default makeStyleGuide;
+```
+
+如果模块默认输出一个对象,对象名的首字母应该大写.
+
+```js
+const StyleGuide = {
+  es6:{
+  }
+}
+
+export default StyleGuide;
+```
 
 
 
 
 
+#### 23.10 ESLint的使用
+
+ESLint 是一个语法规则和代码风格的检查工具，可以用来保证写出语法正确、风格统一的代码。
+
+首先，安装 ESLint。
+
+```js
+$ npm i -g eslint
+```
+
+然后，安装 Airbnb 语法规则，以及 import、a11y、react 插件。
+
+```js
+$ npm i -g eslint-config-airbnb
+$ npm i -g eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-react
+```
+
+最后，在项目的根目录下新建一个`.eslintrc`文件，配置 ESLint。
+
+```js
+{
+  "extends": "eslint-config-airbnb"
+}
+```
+
+现在就可以检查，当前项目的代码是否符合预设的规则。
+
+`index.js`文件的代码如下。
+
+```js
+var unusued = 'I have no purpose!';
+
+function greet() {
+    var message = 'Hello, World!';
+    alert(message);
+}
+
+greet();
+```
+
+使用 ESLint 检查这个文件，就会报出错误。
+
+```shell
+$ eslint index.js
+index.js
+  1:1  error  Unexpected var, use let or const instead          no-var
+  1:5  error  unusued is defined but never used                 no-unused-vars
+  4:5  error  Expected indentation of 2 characters but found 4  indent
+  4:5  error  Unexpected var, use let or const instead          no-var
+  5:5  error  Expected indentation of 2 characters but found 4  indent
+
+✖ 5 problems (5 errors, 0 warnings)
+```
+
+上面代码说明，原文件有五个错误，其中两个是不应该使用`var`命令，而要使用`let`或`const`；一个是定义了变量，却没有使用；另外两个是行首缩进为 4 个空格，而不是规定的 2 个空格。
